--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ tensorflow-text==2.13.0rc0
 nltk==3.8.1
 spacy>=3.0.0,<4.0.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm
-
+pydantic
